# Nautilus

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
cuda/: CMakeLists.txt  kernels.cu  test_material.cu
cuda/core/: CMakeLists.txt  Constants.cuh  Field.cu  Field.cuh  FrequencyDomain.cuh  Material.cu  Material.cuh  Module.cuh  Scene.cu  Scene.cuh  Solver.cu  Solver.cuh  Solver_Reflection.cuh  export.cuh  kernels.cu  kernels.cuh  test.py
cuda/utils/: constant_memory.cu  constant_memory.cuh
docs/: dependencies.dot
example/: CMakeLists.txt  main.cpp  main.cu
example/00-Boundary/: CMakeLists.txt  main.cu  show_border.py
example/01-Irenes_Antenna/: CMakeLists.txt  main.cu
include/: Event.h  Field.h  MMaterial.h  Material.h  Module.h  Scene.h  Simulation.h  Solver.h  export.cuh  export.h
python/: read_file.py  show_3d.py
src/: Event.cu  Field.cu  Material.cpp  Material.cu  Module.cu  Scene.cpp  Scene.cu  Simulation.cu  Solver.cpp  export.cpp  main.cu
test/: CMakeLists.txt  Event.cu  TestEmitter.cu  TestEvent.cu  TestField.cu  TestFrequencyDomain.cu  TestReciever.cu
